# MIP_IF_4JointProblem

./: .gitignore  README.md  pyproject.toml
data/synthetic/: 2_2_test.npy  3_2_test.npy  4_2_test.npy
experiment_conf/: config-cluster.yaml  config.yaml
experiment_conf/problems/: EEG.yaml  ecg.yaml  lds.yaml
experiment_conf/solvers/: dtw.yaml  em.yaml  fft.yaml  if.yaml  if_gurobi.yaml
notebooks/: eeg_seizure_prediction.ipynb
old scripts/: MIP4_Kcluster.py  MIP4cluster.py  MIP4cluster_3Dindexing_hidden.py  MIP4cluster_Kcluster_3Dindexing_chatgpt.py  MIP4cluster_Kcluster_chatgpt.py  MIP_IF.py  utils_MIP4Cluster.py
old scripts/tests/: Test_ECG.py  Test_Synthetic_Data.py  data_loader.py  plot_test.py  run_eeg_10x100x5_all_methods.sh
old scripts/utils/: MIP_IF_3Dindexing.py  data_preprocessing.py
scripts/: run_ecg.sh  run_eeg.sh  run_eeg_test.sh  run_lds.sh
src/mixture_lds/: __init__.py  experiments.py  requirements.txt
src/mixture_lds/data/: __init__.py  build_chbmit_eeg.py  preprocessing.py
src/mixture_lds/models/: MIP4cluster_mosek.py  __init__.py  mip_if_3dindexing.py
src/mixture_lds/solvers/: __init__.py  solve_dtw.py  solve_em.py  solve_fft.py  solve_if.py  solve_if_gurobi.py
src/mixture_lds/utils/: __init__.py  visualise.py
