[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "mixture_lds"
version = "0.0.1"
description = "Joint Problems in Learning Multiple Dynamical Systems"
authors = [
  { name = "Xiaoyu He", email = "your@email.com" },
]
license = { text = "Proprietary" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "gurobipy>=13.0.1",
    "idaes-pse>=2.11.0",
    "mne>=1.12.1",
    "ncpol2sdpa==1.12.2",
    "numpy==2.4.1",
    "pandas>=2.3.3",
    "pyomo==6.10.0",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "tslearn>=0.8.1",
    "h5py>=3.11.0",
    "torch==2.6.0",
    "typer==0.15.1",
    "uvicorn==0.34.0",
]

[project.scripts]
mixture-lds-experiments = "mixture_lds.experiments:main"

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mypy==1.19.1",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python==2.0.1",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
